--- a/data/showtime/Rakefile
+++ b/data/showtime/Rakefile
@@ -1,5 +1,5 @@
 require 'cucumber/rake/task'
 
-Cucumber::Rake::Task.new('cucumber_now') do |feature|
+Cucumber::Rake::Task.new('testnow') do |feature|
   feature.cucumber_opts = 'features --profile default'
 end
